# mac-service-master

./: .gitignore  .webui_secret_key  CHANGELOG.md  DEPLOYMENT.md  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: USER_GUIDE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  DEPLOYMENT.md  tauri.conf.json
src-tauri/.github/workflows/: release.yml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
