[package]
name = "service_master"
version = "0.1.0"
description = "macOS launchd 图形化管理工具"
authors = ["wanghao"]
edition = "2021"

[lib]
name = "service_master_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "service_master"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
dirs = "5"
window-vibrancy = "0.6"
reqwest = { version = "0.12", features = ["blocking"], default-features = false }
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
